--- a/book.bib
+++ b/book.bib
@@ -27,6 +27,26 @@
 }
 
 
+@article{Asselbergs2016,
+abstract = {BACKGROUND Ecological momentary assessment (EMA) is a useful method to tap the dynamics of psychological and behavioral phenomena in real-world contexts. However, the response burden of (self-report) EMA limits its clinical utility. OBJECTIVE The aim was to explore mobile phone-based unobtrusive EMA, in which mobile phone usage logs are considered as proxy measures of clinically relevant user states and contexts. METHODS This was an uncontrolled explorative pilot study. Our study consisted of 6 weeks of EMA/unobtrusive EMA data collection in a Dutch student population (N=33), followed by a regression modeling analysis. Participants self-monitored their mood on their mobile phone (EMA) with a one-dimensional mood measure (1 to 10) and a two-dimensional circumplex measure (arousal/valence, -2 to 2). Meanwhile, with participants' consent, a mobile phone app unobtrusively collected (meta) data from six smartphone sensor logs (unobtrusive EMA: calls/short message service (SMS) text messages, screen time, application usage, accelerometer, and phone camera events). Through forward stepwise regression (FSR), we built personalized regression models from the unobtrusive EMA variables to predict day-to-day variation in EMA mood ratings. The predictive performance of these models (ie, cross-validated mean squared error and percentage of correct predictions) was compared to naive benchmark regression models (the mean model and a lag-2 history model). RESULTS A total of 27 participants (81{\%}) provided a mean 35.5 days (SD 3.8) of valid EMA/unobtrusive EMA data. The FSR models accurately predicted 55{\%} to 76{\%} of EMA mood scores. However, the predictive performance of these models was significantly inferior to that of naive benchmark models. CONCLUSIONS Mobile phone-based unobtrusive EMA is a technically feasible and potentially powerful EMA variant. The method is young and positive findings may not replicate. At present, we do not recommend the application of FSR-based mood prediction in real-world clinical settings. Further psychometric studies and more advanced data mining techniques are needed to unlock unobtrusive EMA's true potential.},
+author = {Asselbergs, Joost and Ruwaard, Jeroen and Ejdys, Michal and Schrader, Niels and Sijbrandij, Marit and Riper, Heleen},
+doi = {10.2196/jmir.5505},
+file = {:Users/lckooistra/Library/Application Support/Mendeley Desktop/Downloaded/Asselbergs et al. - 2016 - Mobile Phone-Based Unobtrusive Ecological Momentary Assessment of Day-to-Day Mood An Explorative Study.pdf:pdf},
+isbn = {1438-8871 (Electronic)
+1438-8871 (Linking)},
+issn = {14388871},
+journal = {Journal of medical Internet research},
+keywords = {affect,data mining,ecological momentary assessment,experience sampling,mobile phone sensing},
+mendeley-groups = {Groups/Groups-APH},
+number = {3},
+pages = {e72},
+pmid = {27025287},
+title = {{Mobile Phone-Based Unobtrusive Ecological Momentary Assessment of Day-to-Day Mood: An Explorative Study}},
+volume = {18},
+year = {2016}
+}
+
+
 @Article{Bates2015,
   title = {Fitting Linear Mixed-Effects Models Using {lme4}},
   author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
