--- a/09_mood.Rmd
+++ b/09_mood.Rmd
@@ -20,22 +20,27 @@ Plotting this data in a graph is an easy way to visually inspect within-subject 
 ```{r fig10a, fig.cap = "34 weeks of mood data, from a single participant"}
 plotmood_down <- ggplot(csd, aes(x = date, y = as.numeric(mood_down))) +
   geom_smooth(method = "loess", span = .05, se = FALSE, colour="dodgerblue4") + 
-  geom_point(size = .3, alpha = .3, position = position_jitter(height = .1),colour="dodgerblue2") + 
-  scale_x_date() + scale_y_continuous(breaks = 1:7) + 
-  xlab("Time") + ylab("Mood")
+  geom_point(size = .3, alpha = .3, position = position_jitter(height = .1),
+  colour="dodgerblue2") + scale_x_date() + scale_y_continuous(breaks = 1:7) +
+  xlab("Time") + ylab("Mood") 
 print(plotmood_down)
 ```  
 
 Combining data from various variables such as activity, sleep and mood in one graph can help respondents understand the interaction between mood and behaviour. 
 
 ```{r fig10f, fig.cap = "34 weeks of combined mood data, from a single participant"}
-plotcombined <- plotmood_down + geom_point(data=csd, aes(date,as.numeric(mood_lonely)), size = .3, alpha = .3, position = position_jitter(height = .1), colour="indianred4") + geom_smooth(data=csd, aes(date,as.numeric(mood_lonely)), method = "loess", span = .05, se = FALSE, colour="indianred2")
-print(plotcombined)
+combined <- plotmood_down + 
+  geom_point(data=csd, aes(date,as.numeric(mood_lonely)), 
+    size = .3, alpha = .3, position = position_jitter(height = .1),
+    colour="indianred4") + 
+  geom_smooth(data=csd, aes(date,as.numeric(mood_lonely)), 
+    method = "loess", span = .05, se = FALSE, colour="indianred2")
+print(combined)
+
 ```  
 
-There are a few things to consider when using unidimensional mood assessment.
-First, it assumes that respondents instinctively understand the concept of general mood. Little is known about whether mood ratings are indeed comparable across respondents (between-subjects). In order to reduce bias and improve reliability, some studies implemented more specific questions, such as "How depressed are you feeling right now" or "How anxious are you feeling right now [@Starr2012]. However, this shifts focus from general mood to more specific mood states or emotions.
-Secondly, the middle of a VAS scale (e.g. 5 or 50) is considered a negative result, and only scores above 6 or 60 are considered acceptable or possible mood states [@Groot2010]. This contrasts with common Likert scales, where the centre often reflects a neutral response. In order to address this issue, some researchers have proposed to use scales ranging from -1 to 1, with 0 as a neutral scale centre. This scale implies a mood state that ranges from negative to positive, rather than absent to present.  
+There are a few things to consider when using unidimensional mood assessment. First, it assumes that respondents instinctively understand the concept of general mood. Little is known about whether mood ratings are indeed comparable across respondents (between-subjects). 
+Secondly, the middle of a VAS scale (e.g. 5 or 50) is considered a negative result, and only scores above 6 or 60 are considered acceptable or possible mood states [@Groot2010]. This contrasts with common Likert scales, where the centre often reflects a neutral response. In order to address this issue, some researchers have proposed to use scales ranging from -1 to 1, with 0 as a neutral scale centre. However, such a scale implies a mood state that ranges from negative to positive, rather than absent to present.  
 
 ### Bipolar unidimensinal items
 \index{Bipolar unidimensinal items}
@@ -43,38 +48,33 @@ Another option is to use bipolar unidimensional items, which place two opposing 
 
 ## Multi-dimensional mood assessment
 \index{Multi-dimensional mood assessment}
-Dimensional models assume that affective states or emotions should be described by (at least) two underlying constructs, instead of just one. Over the past decades several multi-dimensional models have been specified (for an overview, see @sander2009). In the context of EMA, researchers most often base their items on the circumplex model [@russell1980circumplex] or the Positive/Negative affect theory [@watson1985]. 
+Dimensional models assume that affective states or emotions should be described by (at least) two bipolar items, instead of just one. Over the past decades several multi-dimensional models have been specified (for an overview, see @sander2009). In the context of EMA, researchers most often base their items on the circumplex model [@russell1980circumplex] or the Positive/Negative affect theory [@watson1985]. 
 
 ### The Circumplex Model
 \index{Circumplex model}
 The Circumplex Model of affect [@russell1980circumplex; @Posner2005] argues that all mood states are a linear combination of two independent, bipolar scales: valence (ranging from low to high arousal) and affect (ranging from unpleasant to pleasant). Combining scores on these scales places the affective states in a circle on one of four quadrants (\@ref(fig:fig10d)). States within one quadrant are believed to be positively correlated, while states in the opposing quadrant are thought to be negatively correlated. 
-
 ```{r fig10d, fig.cap = "Russell's Circumplex model of affect.", echo = FALSE, out.width = '50%'}
 knitr::include_graphics("images/outcomes/Russell_1980.png")
 ```
+There are several options to operationalise the Circumplex model in EMA research. For example, respondents can rate valence and arousal on two VAS scales. The most pragmatic approach is to report both scale scores seperately [@Asselbergs2016]. Alternatively, scores can be combined to give insight into the quadrant in which respondents affective states fall:
 
-There are several options to operationalise the Circumplex model in EMA research. For example, respondents can rate valence and arousal on two VAS scales. The most pragmatic approach is to report both scale scores seperately [@asselbergs2016]. Alternatively, scores can be combined to give insight into the quadrant in which respondents affective states fall:
-> Low aroused - unpleasant
-> Low aroused - pleasant
-> High aroused - unpleasant
-> High aroused - pleasant
+- Low aroused - unpleasant
+- Low aroused - pleasant
+- High aroused - unpleasant
+- High aroused - pleasant
 
-A downside of the Circumplex model is that concepts of valence and arousal can be hard to convey to respondents, especially when translated to other languages, such as Dutch. One alternative is to adjust the scale ends, for example using “extreme sleepiness” and “extreme high energy” [@sharar2016]. 
+A downside of the Circumplex model is that the concepts of valence and arousal can be hard to convey to respondents, especially when translated to other languages, such as Dutch. One alternative is to adjust the scale ends, for example using “extreme sleepiness” and “extreme high energy” [@sharar2016]. 
+Another option is to use pictures or emoticons, rather than language. For this purpose, DeSmet and colleagues developed the pick-a-mood scale, which is a pictorial self-report scale. The scale builds on the circumplex model and adds the third dimension "dominance" (level of experienced control over the mood state), rendering eight (instead of four) different mood states and one neutral state. 
 
-
-
-
-Another option is to use pictures or emoticons, rather than language. For this purpose, DeSmet and colleagues developed the pick-a-mood scale, which is a pictorial self-report scale. The scale builds on the circumplex model and adds the third dimension "dominance" (level of experienced control over the mood state), rendering eight different mood states and one neutral state. 
-
-```{r fig10b, fig.cap = "The Pick-A-Mood Circle.", echo = FALSE, out.width = '50%'}
+```{r fig09b, fig.cap = "The Pick-A-Mood Circle.", echo = FALSE, out.width = '50%'}
 knitr::include_graphics("images/outcomes/Circumplex-Pick-A-Mood.png")
 ```
 
 ## Negative & Positive Affect
 \index{Negative Affect} \index{Positive Affect}
-Watson and Tellegen [@watson1985] also specified the Circumplex model, arguing that the diagonal quadrants represent Positive and Negative affect (PA/NA) and that these two terms are the main dimensions of affect [@Watson1999]. PA ranges from sadness to high energy, NA from calmness to distress [@Watson1988]. While bipolar-unidimensional assessment assumes that positive and negative affect are mutually exclusive, the PA/NA affect model assumes that these seemingly opposing mood states can occur simultaneously. Watson and Clark [@Watson1997] for example, showed a moderate correlation between the two constructs (.32) and argued that while bipolar scales can be used for within-subject assessment, unipolar scales have superior convergent and discriminant validity in between-subject data.
+Watson and Tellegen [@watson1985] also specified the underlying theory of the Circumplex model, arguing that the diagonal quadrants represent Positive and Negative affect (PA/NA) and that these two terms are the main dimensions of affect [@Watson1999]. PA ranges from sadness to high energy, NA from calmness to distress [@Watson1988]. While bipolar-unidimensional assessment assumes that positive and negative affect are mutually exclusive, the PA/NA affect model assumes that these seemingly opposing mood states can occur simultaneously. Watson and Clark [@Watson1997] for example, showed a moderate correlation between the two constructs (.32) and argued that while bipolar scales can be used for within-subject assessment, unipolar scales have superior convergent and discriminant validity in between-subject data.
 
-In order to measure Postive and Negative Affect, the Postive and Negative Affect Schedule was developed by Watson, Clark and Tellegen [@Watson1988]. Respondents are asked to indicatie on 20 items "to what extent you feel this way right now" on a 5-point Likert-scale, ranging from 1 (very slightly or not at all) to 5 (very) [@Watson1999]. Items include:
+In order to measure Postive and Negative Affect, a designated Postive and Negative Affect Schedule was developed by Watson, Clark and Tellegen [@Watson1988]. Respondents are asked to indicatie on 20 affect items "to what extent you feel this way right now" on a 5-point Likert-scale, ranging from 1 (very slightly or not at all) to 5 (very) [@Watson1999]. Items include:
 
 - Negative Affect (10): afraid, scared, nervous, jittery, irritable, hostile, guilty, ashamed, upset, distressed 
 - Positive Affect (10): active, alert, attentive, determined, enthusiastic, excited, inspired, interested, proud, strong
@@ -85,6 +85,7 @@ For their EMA studies, Wichers and colleagues created a 10-item short-form of th
 - Positive affect (4): cheerful, content, energetic, enthusiastic. 
 
 All items were rated on 7-point Likert scales. PA and NA were calculated as the average score across all five items, and weighted for their factor loadings [@Wichers2012].
+In r, such a factor analysis can be excecuted as follows: 
 
 ```{r fig10c, fig.cap = "Factor analysis of 7 EMA items, revealing two factors:  Positive Affect (PA) and Negative Affect (NA)."}
 library(dplyr)
@@ -113,20 +114,7 @@ psych::fa.diagram(fa,
 ```
 
 ## Bag-of-Items
+Another strategy for choosing EMA questions on mood, is to use the 'bag-of-items' approach. Or, in other words, to combine items from various sources, such as existing questionnaires. Often this strategy 
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus dui viverra.
-
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat purus nec, lobortis imperdiet diam. Donec sed lectus at sem ultrices commodo.
-
-Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id consequat nibh.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus dui viverra.
-
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat purus nec, lobortis imperdiet diam. Donec sed lectus at sem ultrices commodo.
-
-Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id consequat nibh.
+In order to reduce bias and improve reliability, some studies implemented more specific questions, such as "How depressed are you feeling right now" or "How anxious are you feeling right now [@Starr2012]. However, this shifts focus from general mood to more specific mood states or emotions.
 
